<resources>
    <string name="app_name">dummypro</string>
    <string name="view_daily_forecasting">View daily forecasting</string>
    <string name="open">open navigation drawer</string>
    <string name="close">open close drawer</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="language">Language</string>
    <string name="Clouds">Clouds</string>
    <string name="Wind">Wind</string>
    <string name="Pressure">Pressure</string>
    <string name="Humidity">Humidity</string>
    <string name="enter_city">Enter City Name</string>
    <string name="add_fav">add this country to favourite</string>
    <string name="get">get</string>
    <string name="save">Save</string>
    <string name="description">Alert Description</string>
    <string name="alert_time">Alert Time</string>
    <string name="start_date">Start Date</string>
    <string name="duration">Alert Duration</string>
    <string name="set">Set Alert</string>
    <string name="alert_desc">Enter Alert Description</string>


    <string-array name="temp_array">
            <item>Kelvin</item>
            <item>Celsius</item>
            <item>Fahrenheit</item>
        </string-array>


        <string-array name="wind_array">
            <item>meter/sec</item>
            <item>miles/hour</item>
        </string-array>

        <string-array name="lang_array">
            <item>Arabic</item>
            <item>English</item>
        </string-array>

</resources>