<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg">


    <TextView
        android:id="@+id/textView"
        android:layout_width="168dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/temperature"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/temp_spinner"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="151dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/wind_speed"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp_spinner" />

    <Spinner
        android:id="@+id/wind_spinner"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/wind_speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="132dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/language"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wind_spinner" />

    <Spinner
        android:id="@+id/lang_spinner"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lang_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>